Add base structure & main functionality (buggy)

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,15 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>hello</h1>
+    <button class="city"></button>
+    <div class="search hide">
+        <button class="exit">exit</button>
+        <input type="search" name="city" id="city">
+        <button class="select">select</button>
+    </div>
+    <button class="temp"></button>
+    <div class="credit">
+        illustrations by <a href="https://www.freepik.com/author/bamdewanto">bamdewanto</a>
+    </div>
 </body>
 </html>
